tools/parser/tests/61-output-in-when.sl
// error: outputs can only be at top level
when 1 < 2:
   output Foobar;
end
